<resources>

    <!-- Start translatable Strings-->

    <!-- Strings Naming Convention - It was detected 6 types of Strings through a general Android App project, this types are gonna help us to give
    to translator a good context about our used Strings, allowing in this way to get a more precise translation when G11n (i18n and l10N) process is required.

            1. Titles
            2. Details
            3. Actions
            4. Plurals
            5. Variables
            6. Placeholders
    Use the proper prefix in your String key name and then add the String context, you must match the next pattern

            $type$_$context$

            E.g.
                <string name="title_myProfile">My Profile</string>
                <string name="detail_myProfile">In this section you can see your profile information</string>
                <string name="action_editProfile">Edit Profile</string>
                <string name="placeholder_name">Type here your public name</string>
    -->

    <!--Actions-->
    <string name="action_send">Send</string>

    <!--Titles-->
    <string name="title_appName">Durandroid</string>
    <string-array name="titles_navDrawer">
        <item>Professional</item>
        <item>Academic</item>
        <item>Personal</item>
        <item>Contact me</item>
    </string-array>

    <string name="title_socialMedia">Social Media</string>
    <string name="title_locationPlace">Location</string>
    <string name="title_email">Email</string>
    <string name="title_phone">Phone</string>
    <string name="title_yourName">Your Awesome Name!</string>
    <string name="title_message">Message</string>
    <string name="title_emailSubject">Durandroid</string>
    <string name="title_companies">Companies</string>
    <string name="title_expertise">Expertise</string>
    <string name="title_skills">Skills</string>

    <string name="title_location">Location</string>
    <string name="title_projects">Projects</string>
    <string name="title_technologies">Technologies</string>
    <string name="title_jobPosition">Position</string>

    <!--Details-->
    <string-array name="details_phrases">
        <item>Never make permanent decisions</item>
        <item>Knowledge is having the right answer. Intelligence is asking the right question</item>
        <item>I am Strong, Because i’ve been weak</item>
        <item>If plan A didn’t work, the alphabet has 25 more letters!i</item>
    </string-array>

    <string name="detail_sendEmail">Send mail...</string>
    <string name="detail_thankYou">Thank You</string>
    <string name="detail_feedbackEmailSent">I will be reading your email as soon as possible!</string>
    <string name="detail_drawerOpen">Open navigation drawer</string>
    <string name="detail_drawerClose">Close navigation drawer</string>
    <string name="detail_companies">Since I was 21 years old I have had the opportunity to work with great teams, so far each year I have learnt and improved my skills, university was not a problem since I started working 2 years before graduated. As a result of discipline I got an Honorific Mention and a full-time Job after graduating.</string>
    <string name="detail_emailWelcomeMessage">Hey! I am happy to receive your message, normally it takes me 3 laboral days to respond you, if you need a faster respose feel free to contact me in another of my contact methods, thank you!</string>

    <!--Placeholders-->
    <string name="placeholder_yourName">Mr. Michael Jackson | Mrs. Beyoncé</string>
    <string name="placeholder_emailMessage">Hi Duran I am an awesome person trying to contact another awesome person, I would like to talk with you about...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- End translatable Strings-->

    <!-- Start Non-translatable Strings-->
    <!--Hardcoded Strings-->
    <string name="sduran_position">Software Engineer</string>
    <string name="sduran_name">Sergio Durán</string>
    <string name="sduran_email">serch_sddm@outlook.com</string>
    <!-- End Non-translatable Strings-->
</resources>
